hello-argocd/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: hello-world
  labels:
    app: hello-world
spec:
  # Remember to change it for different cluster
  host: hello-world.apps.cluster-lplz5.lplz5.sandbox1583.opentlc.com
  port:
    targetPort: http
  tls:
    termination: edge
  to:
    kind: Service
    name: hello-world
    weight: 100
  wildcardPolicy: None
